<resources>
    <string name="sign_in_title">Masuk</string>
    <string name="sign_in_with_google">Masuk dengan Google</string>
    <string name="sign_in_with_facebook">Masuk dengan Facebook</string>
    <string name="sign_in_with_email">Masuk dengan Email</string>
    <string name="sign_in_with_phone">Masuk dengan Nomor HP</string>
    <string name="sign_in_or">Atau</string>
    <string name="sign_in_phone">Nomor HP</string>
    <string name="sign_in_phone_hint">contoh: 81312345678</string>
    <string name="sign_in_phone_error_min_character">Nomor handphone harus diikuti minimal oleh 8 digit</string>
    <string name="sign_in_phone_error_format">Kami akan menghubungi Anda di nomor ini</string>
    <string name="sign_in_email">Alamat Email</string>
    <string name="sign_in_email_hint">contoh: john@example.org</string>
    <string name="sign_in_email_error_empty">Email tidak boleh kosong</string>
    <string name="sign_in_email_error_format">Format email Anda salah. Gunakan format: nama@email.com</string>
    <string name="sign_in_password">Kata Sandi</string>
    <string name="sign_in_password_hint">Minimal 8 karakter</string>
    <string name="sign_in_password_error_min_character">Panjang kata sandi minimal harus 8 karakter</string>
    <string name="sign_in_forgot_password">Lupa Password?</string>
    <string name="sign_in_dont_have_account">Belum punya akun?</string>
    <string name="sign_in_register">Daftar sekarang</string>
    <string name="sign_in_error_empty_field">Tidak boleh kosong</string>
    <string name="sign_in_error_min_character">Panjang kata sandi minimal harus 8 karakter</string>
    <string name="sign_in_error_email_format">Format email tidak benar</string>
    <string name="sign_in_btn_fingerprint">Masuk dengan Fingerprint</string>
    <string name="sign_in_call_cs_sure">Lanjutkan untuk menghubungi layanan pelanggan?</string>
    <string name="sign_in_call_cs_yes">Hubungi</string>
    <string name="sign_in_call_cs_no">Batal</string>
    <string name="sign_in_call_number">085222852221</string>
    <string name="sign_in_finger_title">Autentikasi</string>
    <string name="sign_in_finger_description">Silahkan login untuk melanjutkan</string>
    <string name="sign_in_finger_use_app_password">Gunakan password</string>
    <string name="sign_in_welcome_back">Selamat datang kembali %1$s</string>
    <string name="otp_title">Verifikasi OTP</string>
    <string name="otp_sub_title">Masukan OTP yang telah dikirimkan</string>
    <string name="otp_to_phone">ke nomor</string>
    <string name="otp_valid_until">Berlaku hingga</string>
    <string name="otp_try_again">Coba lagi</string>
    <string name="otp_please_wait">Mohon menunggu untuk kirim ulang OTP</string>
    <string name="otp_submit">Kirim</string>
    <string name="register_title">Complete Profile</string>
    <string name="register_add_avatar">Add Profile Photo</string>
    <string name="register_name">Name</string>
    <string name="register_name_hint">Fill your name</string>
    <string name="register_bio">Bio</string>
    <string name="register_bio_hint">Fill your bio</string>
    <string name="register_email">Email</string>
    <string name="register_email_hint">Enter email address</string>
    <string name="register_phone">Phone Number</string>
    <string name="register_phone_hint">contoh: 81312345678</string>
    <string name="register_continue">Continue</string>
</resources>