<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <import type="tossaro.android.auth.R" />

        <variable
            name="vm"
            type="tossaro.android.auth.app.signin.SignInViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="18dp"
        android:paddingTop="30dp"
        android:paddingEnd="18dp"
        android:paddingBottom="34dp"
        android:visibility="@{vm.signInType == `phone` ? View.VISIBLE : View.GONE}">

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sign_in_phone"
            android:textColor="@color/bodyText2"
            android:textSize="12sp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_country"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="24dp"
            android:drawableLeft="@drawable/country"
            android:drawablePadding="8dp"
            android:lines="1"
            android:text="@={vm.country}"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <EditText
            android:id="@+id/et_phone"
            style="@style/EditText"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:digits="1234567890"
            android:hint="@string/register_phone_hint"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:lines="1"
            android:text="@={vm.phone}"
            app:layout_constraintLeft_toRightOf="@id/et_country"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_phone" />

        <TextView
            android:id="@+id/tvPhoneError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@{vm.phoneError != null ? context.getString(vm.phoneError) : ``}"
            android:textColor="@color/negative"
            android:textSize="12sp"
            android:visibility="@{vm.phoneError != null ? View.VISIBLE : View.GONE}"
            app:layout_constraintTop_toBottomOf="@id/et_phone" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_button_primary_solid_rounded"
            android:enabled="@{vm.phone != null &amp;&amp; vm.phoneError == null}"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:onClick="@{()->vm.signInPhone()}"
            android:padding="12dp"
            android:text="@string/sign_in_with_phone"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPhoneError" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>